force-app/main/default/objects/WhatsApp_Conversation__b/WhatsApp_Conversation__b.object-meta.xml
<CustomObject>
    <label>WhatsApp Conversation</label>
    <pluralLabel>WhatsApp Conversations</pluralLabel>
</CustomObject>