force-app/main/default/objects/WhatsApp_Conversation__b/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>