force-app/main/default/objects/WhatsApp_Conversation__b/fields/From_Phone__c.field-meta.xml
<CustomField>
    <fullName>From_Phone__c</fullName>
    <label>From Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>