force-app/main/default/objects/WhatsApp_Conversation__b/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>