force-app/main/default/objects/WhatsApp_Conversation__b/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <label>Media Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>