force-app/main/default/objects/WhatsApp_Conversation__b/fields/Media_URL__c.field-meta.xml
<CustomField>
    <fullName>Media_URL__c</fullName>
    <label>Media URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>