force-app/main/default/objects/WhatsApp_Conversation__b/fields/Message_formatted__c.field-meta.xml
<CustomField>
    <fullName>Message_formatted__c</fullName>
    <label>Message formatted</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>