force-app/main/default/objects/WhatsApp_Conversation__b/fields/Read__c.field-meta.xml
<CustomField>
    <fullName>Read__c</fullName>
    <label>Read</label>
    <length>50</length>
    <type>Text</type>
</CustomField>