force-app/main/default/objects/WhatsApp_Conversation__b/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <label>Record ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>