force-app/main/default/objects/WhatsApp_Conversation__b/fields/Status_From_Agent__c.field-meta.xml
<CustomField>
    <fullName>Status_From_Agent__c</fullName>
    <label>Status From Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>