force-app/main/default/objects/WhatsApp_Conversation__b/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>