force-app/main/default/objects/WhatsApp_Conversation__b/fields/To_Phone__c.field-meta.xml
<CustomField>
    <fullName>To_Phone__c</fullName>
    <label>To Phone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>